added projects page

--- a/src/pages/projects/index.twig
+++ b/src/pages/projects/index.twig
@@ -1,16 +1,27 @@
----
-title: Projects
-layout: page
----
+{% for name,project in app.projects.all %}
 
-{% for project in site.projects %}
+    <h2>
+        <a href="/projects/{{ name }}">{{ project.title }}</a>
+        &nbsp; &nbsp;
+        <span style="font-size:70%;color:gray">{{ project.lang }}</span>
+    </h2>
 
-    <h2><a href="/{{ project.name }}">{{ project.title }}</a> &nbsp; &nbsp; <span style="font-size:70%;color:gray">{{ project.lang }}</span></h2>
-    {{ project.description }}<br>
-    <a href="/{{ project.name }}/latest">{{ project.version }}</a> &middot;
-    <a href="/{{ project.name }}/CHANGELOG">changelog</a> &middot;
-    <a href="/{{ project.name }}/docs">docs</a> &middot;
-    <a href="https://github.com/hiqdev/{{ project.package | default: project.name }}">github</a> &middot;
-    <a href="/packages">{{ project.packages_num }} packages</a>
+    <a href="https://github.com/{{ project.fullName }}" style="height:20px">
+        <img src="https://img.shields.io/github/stars/{{ project.fullName }}.svg?style=social&label=Star"/>
+    </a>
+    <a href="https://github.com/{{ project.fullName }}/issues" style="height:20px">
+        <img src="https://img.shields.io/github/issues-raw/{{ project.fullName }}.svg"/>
+    </a>
+    <a href="https://github.com/{{ project.fullName }}/releases" style="height:20px">
+        <img src="https://badge.fury.io/gh/{{ project.vendor }}%2F{{ project.package }}.svg"/>
+    </a>
+    <a href="https://packagist.org/packages/{{ project.fullName }}" style="height:20px">
+        <img src="https://poser.pugx.org/{{ project.fullName }}/downloads"/>
+    </a>
+    <a href="https://travis-cs.org/{{ project.fullName }}" style="height:20px">
+        <img src="https://img.shields.io/travis/{{ project.fullName }}.svg"/>
+    </a>
+
+    <p>{{ project.description }}</p>
 
 {% endfor %}
