added `site/package` action for package index page

--- a/src/pages/packages/index.twig
+++ b/src/pages/packages/index.twig
@@ -4,7 +4,7 @@ title: Packages
 {% for name,package in app.packages.all %}
 
     <h2>
-        <a href="/packages/{{ name }}">{{ package.name }}</a>
+        <a href="/packages/{{ name }}/">{{ package.name }}</a>
         &nbsp; &nbsp;
         <span style="font-size:70%;color:gray">{{ package.lang }}</span>
     </h2>
