--- a/src/pages/projects/index.twig
+++ b/src/pages/projects/index.twig
@@ -5,7 +5,7 @@ title: Projects
 {% for name,project in app.projects.all %}
 
     <h2>
-        <a href="/packages/{{ project.package }}">{{ project.title }}</a>
+        <a href="/packages/{{ project.package }}/">{{ project.title }}</a>
         &nbsp; &nbsp;
         <span style="font-size:70%;color:gray">{{ project.lang }}</span>
     </h2>
